--- a/source/dialogs/curve-comparison/curve-comparison-modal.html
+++ b/source/dialogs/curve-comparison/curve-comparison-modal.html
@@ -124,10 +124,6 @@
                             <tbody style="display: block; height: 10em; overflow-y: auto">
                             <tr ng-repeat="compa in wiModal.curvesComparison">
                                 <td style="width: 25%">
-                                    <!-- <select class="form-control wi-form-control"
-                                            ng-model="compa.curve1"
-                                            ng-options="curve as curve.name for curve in wiModal.curves">
-                                    </select> -->
                                     <ui-select ng-model="compa.curve1"
                                                 class="normal-text">
                                         <ui-select-match placeholder='Select a curve'>
@@ -161,7 +157,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()'><span class="run-16x16"></span>Run</button>
+                <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()'
+                        ng-disabled="wiModal.applyingInProgress"><span class="run-16x16"></span>Run</button>
                 <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>Close</button>
             </div>
         </div>
