tvd-conversion-modal

--- a/source/dialogs/tvd-conversion/tvd-conversion-modal.html
+++ b/source/dialogs/tvd-conversion/tvd-conversion-modal.html
@@ -105,13 +105,13 @@
                             <div class="col-sm-1">
                                 <input type="number" name="" value="" class="form-control wi-form-control">
                             </div>
-                            <label for="" class="col-sm-2">
+                            <label for="" class="col-sm-2" style="padding-right: 0px">
                                 Deviation is in column
                             </label>
                             <div class="col-sm-1">
                                 <input type="number" class="form-control wi-form-control">
                             </div>
-                            <label for="" class="col-sm-2">
+                            <label for="" class="col-sm-2" style="padding-right: 0px">
                                 Azimuth is in column
                             </label>
                             <div class="col-sm-1">
@@ -182,7 +182,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()'>
+                <button class='btn btn-default' ng-click='wiModal.onSaveButtonClicked()'>
                     <span class="apply-16x16"></span>Save</button>
                 <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()'>
                     <span class="run-16x16"></span>Run</button>
