--- a/source/dialogs/curve-merge/curve-merge-modal.html
+++ b/source/dialogs/curve-merge/curve-merge-modal.html
@@ -50,25 +50,25 @@
                         <label for="" class="control-label col-sm-3">Method </label>
                         <div class="col-sm-2">
                             <label>
-                                <input ng-model="wiModal.calcMethod"
+                                <input ng-model="wiModal.method"
                                        type="radio" value="max" class="wi-form-control"> Max
                             </label>
                         </div>
                         <div class="col-sm-2">
                             <label>
-                                <input ng-model="wiModal.calcMethod"
+                                <input ng-model="wiModal.method"
                                        type="radio" value="min" class="wi-form-control"> Min
                             </label>
                         </div>
                         <div class="col-sm-2">
                             <label>
-                                <input ng-model="wiModal.calcMethod"
+                                <input ng-model="wiModal.method"
                                        type="radio" value="average" class="wi-form-control"> Average
                             </label>
                         </div>
                         <div class="col-sm-2">
                             <label>
-                                <input ng-model="wiModal.calcMethod"
+                                <input ng-model="wiModal.method"
                                        type="radio" value="sum" class="wi-form-control"> Sum
                             </label>
                         </div>
