update split curve

--- a/source/dialogs/curve-merge/curve-merge-modal.html
+++ b/source/dialogs/curve-merge/curve-merge-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
-                <h4><span class="well-insight-16x16"></span>&nbsp;Curve Average</h4>
+                <h4><span class="well-insight-16x16"></span>&nbsp;Merge Curve</h4>
             </div>
             <div class="modal-body dialog-style">
                 <form class="form-horizontal" action="" name="modalCurveAverage">
