--- a/source/dialogs/curve-comparison/curve-comparison-modal.html
+++ b/source/dialogs/curve-comparison/curve-comparison-modal.html
@@ -88,7 +88,7 @@
                             </thead>
                             <tbody style="height: 7em;">
                             
-                            </style>>
+                            </style>
                                 <tr ng-repeat="zone in wiModal.zones track by $index"
                                     ng-class="{selected:$index == selectedRow}"
                                     ng-click="wiModal.setClickedRow($index)">
@@ -134,7 +134,7 @@
                                         </ui-select-match>
                                         <ui-select-choices group-by="'datasetName'" position="down"
                                                             repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
-                                            <div class="padding-left-20px">{{curve.properties.name}}</div>
+                                            <div class="normal-text">{{curve.properties.name}}</div>
                                         </ui-select-choices>
                                     </ui-select>
                                 </td>
@@ -146,7 +146,7 @@
                                         </ui-select-match>
                                         <ui-select-choices group-by="'datasetName'" position="down"
                                                             repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
-                                            <div class="padding-left-20px">{{curve.properties.name}}</div>
+                                            <div class="normal-text">{{curve.properties.name}}</div>
                                         </ui-select-choices>
                                     </ui-select>
                                 </td>
