--- a/source/dialogs/tvd-conversion/tvd-conversion-modal.html
+++ b/source/dialogs/tvd-conversion/tvd-conversion-modal.html
@@ -8,7 +8,7 @@
             </div>
             <div class="modal-body dialog-style">
                 <div class="row">
-                    <form class="form-horizontal form-condensed" action="" name="modalCurveAverage">
+                    <form class="form-horizontal form-condensed">
                         <h5 class="modal-infomation-title">
                             <span class="well-16x16"></span>
                             Well
